updated joker purchase flow